Made fixes after editing outside of an IDE.